--- a/style.css
+++ b/style.css
@@ -1,30 +1,45 @@
+body{
+  background-color: #FDFDFD
+}
+
 #sidebar{
   float: left;
   margin: 2px;
-  border: 2px solid green;
+  border: 2px solid #000044;
   padding: 4px;
-  background-color: ;
+  background-color:#98BCDC;
   width: 20%
 }
 
 #header{
   float: right;
   margin: 2px;
-  border: 2px solid green;
+  border: 2px solid #000044;
   padding: 4px;
-  background-color: ;
+  background-color:#98BCDC;
   width: 78%
 }
 
 #about{
   float: right;
   margin: 2px;
-  border: 2px solid green;
+  border: 2px solid #000044;
   padding: 4px;
-  background-color: ;
+  background-color:#98BCDC;
   width: 78%;
 }
 
 img{
-  width: 100%
+  width: 25%
+}
+
+#about p{
+  margin: 2px;
+  ;
+  padding: 4px;
+  background-color: success ;
+}
+
+em{
+  color: #FFDC74;
 }
